Adding cheat sheet to README